----------------------------------------------------------------------
Tue Jul  3 18:01:24 2001                        Michael Jennings (mej)

All the docs and themes should now be up-to-date.  Unless a
showstopping bug turns up in the near future, this is pretty much it
for 0.9.1.  Now we just need some testing to make sure there's
nothing horridly wrong....  So you all can test while we finish up
the web site and the backgrounds. :-)
----------------------------------------------------------------------
Fri Jul 13 17:07:45 2001                        Michael Jennings (mej)

This is mostly cosmetic, but fairly important nonetheless.  Saved
config files should not contain the "main" context.
----------------------------------------------------------------------
Thu Jul 19 12:19:21 2001                        Michael Jennings (mej)

Minor fix to correct popup scrollbar handling on startup.
----------------------------------------------------------------------
Sat Jul 21 20:22:26 2001                        Michael Jennings (mej)

Although I have yet to be able to reproduce it, I believe this will
fix Debian bug #104393.  I don't think the lower parts of that array
were getting properly zeroed. :(
----------------------------------------------------------------------
Mon Jul 23 11:05:45 2001                        Michael Jennings (mej)

Well that was dumb.  PNG backgrounds which were tiled rather than
scaled would end up nuking most of the window.  Fixed now.
----------------------------------------------------------------------
Mon Jul 23 17:59:18 2001                        Michael Jennings (mej)

Fixed the problem where the wrong font would end up in your menus and
buttonbars if you enable multibyte support but don't have a specific
encoding in use.  I also corrected a large number of misplaced
newlines in error messages; I think that was some Perl-fu gone awry.
----------------------------------------------------------------------